--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       <a href="https://www.mext.go.jp/studxstyle/" target="_blank" class="content-card"
         data-categories="GIGAスクール構想,教育改革">
         <div class="card-image-container">
-          <img src="portal_images/studx.png" alt="StuDX Style" class="w-full h-48 object-cover rounded-t-2xl">
+          <img src="assets/icons/studx.png" alt="StuDX Style" class="w-full h-48 object-cover rounded-t-2xl">
         </div>
         <div class="p-5">
           <h2 class="text-lg font-semibold mb-2">スタディーエックス　スタイル<br>StuDX Style</h2>
@@ -274,7 +274,7 @@
       <a href="https://www.onlinemictest.com/ja/touch-screen-test/" target="_blank" class="content-card"
         data-categories="動作確認,ツール">
         <div class="card-image-container">
-          <img src="portal_images/touch_test.png" alt="タッチパネルテスト" class="w-full h-48 object-cover rounded-t-2xl">
+          <img src="assets/icons/touchpanel.png" alt="タッチパネルテスト" class="w-full h-48 object-cover rounded-t-2xl">
         </div>
         <div class="p-5">
           <h2 class="text-lg font-semibold mb-2">タブレット動作チェックツール<br>タッチパネルテスト</h2>
@@ -315,7 +315,7 @@
       <a href="https://medu-web.github.io/microbit/microbit.html" target="_blank" class="content-card"
         data-categories="プログラミング,micro:bit">
         <div class="card-image-container">
-          <img src="portal_images/romanji.png" alt="micro:bit" class="w-full h-48 object-cover rounded-t-2xl">
+          <img src="assets/icons/microbit.png" alt="micro:bit" class="w-full h-48 object-cover rounded-t-2xl">
         </div>
         <div class="p-5">
           <h2 class="text-lg font-semibold mb-2">micro:bit購入プラン</h2>
@@ -328,7 +328,7 @@
       <a href="https://medu-web.github.io/AI-Educational-Content-Hub/" target="_blank" class="content-card"
         data-categories="AI教育,生成AI">
         <div class="card-image-container">
-          <img src="portal_images/microbit.png" alt="AI" class="w-full h-48 object-cover rounded-t-2xl">
+          <img src="assets/icons/aicontents.png" alt="AI" class="w-full h-48 object-cover rounded-t-2xl">
         </div>
         <div class="p-5">
           <h2 class="text-lg font-semibold mb-2">AI教育コンテンツハブ</h2>
@@ -341,7 +341,7 @@
       <a onclick="openBisquitModal()" class="content-card"
         data-categories="授業計画,プログラミング">
         <div class="card-image-container">
-          <img src="portal_images/bisquit.png" alt="ビスケット授業計画" class="w-full h-48 object-cover rounded-t-2xl">
+          <img src="assets/icons/visquit.png" alt="ビスケット授業計画" class="w-full h-48 object-cover rounded-t-2xl">
         </div>
         <div class="p-5">
           <h2 class="text-lg font-semibold mb-2">ビスケット授業計画</h2>
@@ -355,7 +355,7 @@
         target="_blank" class="content-card"
         data-categories="算数,百マス">
         <div class="card-image-container">
-          <img src="portal_images/math.png" alt="百マス計算" class="w-full h-48 object-cover rounded-t-2xl">
+          <img src="assets/icons/hyakumasu.png" alt="百マス計算" class="w-full h-48 object-cover rounded-t-2xl">
           <div class="absolute top-2 right-2 bg-red-500 text-xs text-white px-2 py-1 rounded-full shadow-md">NEW</div>
         </div>
         <div class="p-5">
@@ -557,3 +557,4 @@
   </script>
 </body>
 </html>
+
