--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
       <a onclick="openBisquitModal()" class="content-card"
         data-categories="授業計画,プログラミング">
         <div class="card-image-container">
-          <img src="assets/icons/visquit.png" alt="ビスケット授業計画" class="w-full h-48 object-cover rounded-t-2xl">
+          <img src="assets/icons/viscuit.png" alt="ビスケット授業計画" class="w-full h-48 object-cover rounded-t-2xl">
         </div>
         <div class="p-5">
           <h2 class="text-lg font-semibold mb-2">ビスケット授業計画</h2>
@@ -557,4 +557,5 @@
   </script>
 </body>
 </html>
+
 
