--- a/index.html
+++ b/index.html
@@ -365,6 +365,20 @@
         </div>
       </a>
 
+      <!-- 新しく追加したカード -->
+      <a href="https://medu-web.github.io/promise/" target="_blank" class="content-card"
+        data-categories="タブレット,パソコンをつかうときの約束 小学1年">
+        <div class="card-image-container">
+          <img src="https://medu-web.github.io/promise/assets/promise.png" alt="タブレットのおやくそく" class="w-full h-48 object-cover rounded-t-2xl">
+          <div class="absolute top-2 right-2 bg-red-500 text-xs text-white px-2 py-1 rounded-full shadow-md">NEW</div>
+        </div>
+        <div class="p-5">
+          <h2 class="text-lg font-semibold mb-2">タブレットのおやくそく</h2>
+          <p class="text-sm text-gray-600 mb-4">はじめてのパソコン　小学校1年生との約束</p>
+          <div class="card-tags"></div>
+        </div>
+      </a>
+
       <!-- テスト用のタグが多いカードは削除しました -->
     </div>
 
@@ -495,6 +509,8 @@
         '算数': 'bg-cyan-700',
         '百マス': 'bg-cyan-600',
         '熊大': 'bg-blue-800',
+        'タブレット': 'bg-red-800',
+        'パソコンをつかうときの約束 小学1年': 'bg-orange-600',
       };
       return colors[category] || 'bg-gray-500';
     }
@@ -557,6 +573,3 @@
   </script>
 </body>
 </html>
-
-
-
