--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
       <a href="https://medu-web.github.io/promise/" target="_blank" class="content-card"
         data-categories="タブレット,パソコンをつかうときの約束 小学1年">
         <div class="card-image-container">
-          <img src="https://medu-web.github.io/promise/assets/promise.png" alt="タブレットのおやくそく" class="w-full h-48 object-contain rounded-t-2xl">
+          <img src="https://storage.googleapis.com/gweb-uniblog-publish-prod/images/gemini-pro-with-google-search.width-1200.jpg" alt="タブレットのおやくそく" class="w-full h-48 object-contain rounded-t-2xl">
           <div class="absolute top-2 right-2 bg-red-500 text-xs text-white px-2 py-1 rounded-full shadow-md">NEW</div>
         </div>
         <div class="p-5">
