--- a/index.html
+++ b/index.html
@@ -239,8 +239,7 @@
           <img src="assets/icons/studx.png" alt="StuDX Style" class="w-full h-full object-contain">
         </div>
         <div class="p-5 flex flex-col items-center">
-          <h2 class="text-lg font-semibold mb-2">スタディーエックス　スタイル<br>StuDX Style</h2>
-          <p class="text-sm text-gray-600 mb-4">文科省の情報発信サイト</p>
+          <p class="text-base text-gray-700 mb-4">文科省の情報発信サイト</p>
         </div>
         <div class="card-tags"></div>
       </a>
@@ -253,8 +252,7 @@
           <img src="assets/icons/wakuwaku.png" alt="学校DX化でわくわくをサポート" class="w-full h-full object-contain">
         </div>
         <div class="p-5 flex flex-col items-center">
-          <h2 class="text-lg font-semibold mb-2">学校DX化でわくわくをサポート</h2>
-          <p class="text-sm text-gray-600 mb-4">先生のための授業・教材研究を支援する情報プラットフォーム</p>
+          <p class="text-base text-gray-700 mb-4">先生のための授業・教材研究を支援する情報プラットフォーム</p>
         </div>
         <div class="card-tags"></div>
       </a>
@@ -267,8 +265,7 @@
           <img src="assets/icons/kyouiku-ict.png" alt="教育ICT環境改革" class="w-full h-full object-contain">
         </div>
         <div class="p-5 flex flex-col items-center">
-          <h2 class="text-lg font-semibold mb-2">教育ICT環境改革</h2>
-          <p class="text-sm text-gray-600 mb-4">未来の教育提案</p>
+          <p class="text-base text-gray-700 mb-4">未来の教育提案</p>
         </div>
         <div class="card-tags"></div>
       </a>
@@ -280,8 +277,7 @@
           <img src="assets/icons/touchpanel.png" alt="タッチパネルテスト" class="w-full h-full object-contain">
         </div>
         <div class="p-5 flex flex-col items-center">
-          <h2 class="text-lg font-semibold mb-2">タブレット動作チェックツール<br>タッチパネルテスト</h2>
-          <p class="text-sm text-gray-600 mb-4">タブレットのタッチ動作を確認</p>
+          <p class="text-base text-gray-700 mb-4">タブレットのタッチ動作を確認</p>
         </div>
         <div class="card-tags"></div>
       </a>
@@ -294,8 +290,7 @@
           <img src="assets/icons/keyboard.png" alt="キーボードテスト" class="w-full h-full object-contain">
         </div>
         <div class="p-5 flex flex-col items-center">
-          <h2 class="text-lg font-semibold mb-2">タブレット動作チェックツール<br>キーボードテスト</h2>
-          <p class="text-sm text-gray-600 mb-4">タブレットのキーボード動作を確認</p>
+          <p class="text-base text-gray-700 mb-4">タブレットのキーボード動作を確認</p>
         </div>
         <div class="card-tags"></div>
       </a>
@@ -308,8 +303,7 @@
           <img src="assets/icons/romanji.png" alt="ローマ字表記の課題" class="w-full h-full object-contain">
         </div>
         <div class="p-5 flex flex-col items-center">
-          <h2 class="text-lg font-semibold mb-2">ローマ字表記の課題</h2>
-          <p class="text-sm text-gray-600 mb-4">言語教育の改善</p>
+          <p class="text-base text-gray-700 mb-4">言語教育の改善</p>
         </div>
         <div class="card-tags"></div>
       </a>
@@ -321,8 +315,7 @@
           <img src="assets/icons/microbit.png" alt="micro:bit" class="w-full h-full object-contain">
         </div>
         <div class="p-5 flex flex-col items-center">
-          <h2 class="text-lg font-semibold mb-2">micro:bit購入プラン</h2>
-          <p class="text-sm text-gray-600 mb-4">プログラミング教育</p>
+          <p class="text-base text-gray-700 mb-4">プログラミング教育</p>
         </div>
         <div class="card-tags"></div>
       </a>
@@ -334,8 +327,7 @@
           <img src="assets/icons/aicontents.png" alt="AI" class="w-full h-full object-contain">
         </div>
         <div class="p-5 flex flex-col items-center">
-          <h2 class="text-lg font-semibold mb-2">AI教育コンテンツハブ</h2>
-          <p class="text-sm text-gray-600 mb-4">人工知能との学び</p>
+          <p class="text-base text-gray-700 mb-4">人工知能との学び</p>
         </div>
         <div class="card-tags"></div>
       </a>
@@ -347,8 +339,7 @@
           <img src="assets/icons/viscuit.png" alt="ビスケット授業計画" class="w-full h-full object-contain">
         </div>
         <div class="p-5 flex flex-col items-center">
-          <h2 class="text-lg font-semibold mb-2">ビスケット授業計画</h2>
-          <p class="text-sm text-gray-600 mb-4">プログラミング入門</p>
+          <p class="text-base text-gray-700 mb-4">プログラミング入門</p>
         </div>
         <div class="card-tags"></div>
       </a>
@@ -362,22 +353,19 @@
           <div class="absolute top-2 right-2 bg-red-500 text-xs text-white px-2 py-1 rounded-full shadow-md">NEW</div>
         </div>
         <div class="p-5 flex flex-col items-center">
-          <h2 class="text-lg font-semibold mb-2">百マス計算</h2>
-          <p class="text-sm text-gray-600 mb-4">一桁の足し算・引き算を素早く計算練習</p>
+          <p class="text-base text-gray-700 mb-4">一桁の足し算・引き算を素早く計算練習</p>
         </div>
         <div class="card-tags"></div>
       </a>
 
       <!-- 新しく追加したカード -->
-      <a href="https://medu-web.github.io/promise/" target="_blank" class="content-card"
-        data-categories="タブレット,パソコンをつかうときの約束 小学1年">
-        <div class="card-image-container flex items-center justify-center">
-        <img id="image-promise" src="assets/icons/promise.png" alt="タブレットのおやくそく" class="w-full h-full object-contain rounded-t-2xl">
-        <div class="absolute top-2 right-2 bg-red-500 text-xs text-white px-2 py-1 rounded-full shadow-md">NEW</div>
-      </div>
+      <a href="https://medu-web.github.io/promise/" target="_blank" class="content-card" data-categories="タブレット,パソコンをつかうときの約束 小学1年">
+        <div class="card-image-container w-32 h-32 flex items-center justify-center">
+          <img id="image-promise" src="assets/icons/promise.png" alt="タブレットのおやくそく" class="w-full h-full object-contain">
+          <div class="absolute top-2 right-2 bg-red-500 text-xs text-white px-2 py-1 rounded-full shadow-md">NEW</div>
+        </div>
         <div class="p-5 flex flex-col items-center">
-          <h2 class="text-lg font-semibold mb-2">タブレットのおやくそく</h2>
-          <p class="text-sm text-gray-600 mb-4">はじめてのパソコン　小学校1年生との約束</p>
+          <p class="text-base text-gray-700 mb-4">はじめてのパソコン　小学校1年生との約束</p>
         </div>
         <div class="card-tags"></div>
       </a>
@@ -540,6 +528,8 @@
       contentItems.forEach(item => {
         const categories = item.dataset.categories ? item.dataset.categories.split(',') : [];
         const tagsContainer = item.querySelector('.card-tags');
+
+        if (!tagsContainer) return; // tagsContainer が存在しない場合はスキップ
 
         tagsContainer.innerHTML = ''; // 既存のタグをクリア
 
